feat(gateway): implement API Gateway for routing between services